--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|VT323');
 @import url('https://fonts.googleapis.com/css?family=Rokkitt');
 @import url('https://fonts.googleapis.com/css?family=Aldrich');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
+ 
 body {
     margin: 0;
     min-height: 100%;
@@ -11,7 +13,7 @@ html {
 }
 
 h2 {
-    font-family: 'Open Sans Condensed';
+    font-family: 'IBM Plex Mono';
     color: rgba(255, 255, 255, 0.5);
 }
 
